# chinese

./: .gitignore  README.md  list_objects.sh
create_db/: .gitignore  create_index.sh  install_veloci.sh
create_db/ch_freq/: Cargo.toml  CharFreq-Classical_mts_edu.xls  Labels used in the PKU PoS system.doc  SUBTLEX-CH webpage.doc  SUBTLEX-CH-CHR.xlsx  char_freq.json
create_db/ch_freq/SUBTLEX-CH-WF_PoS/: SUBTLEX-CH-WF_PoS
create_db/ch_freq/src/: main.rs
create_db/create_json/: .gitignore  CCCC_Vocabulary_2022.xls  Cargo.toml  README.md  hacking-chinese_missing-tocfl-words.csv  臺灣華語文能力基準詞語表_111-11-14, grade 3 and 7.xlsx
create_db/create_json/src/: jmdict.rs  main.rs
create_db/indices/: .gitignore  create.sh  sample.db  veloci_config.toml
webpage/: .gitignore  Cargo.toml  README.md  TODO.md  gen_css.sh  index.html  package-lock.json  package.json  style.css  tailwind.config.js
webpage/src/: input.css  main.rs  search.rs
