[package]
name = "webpage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
dioxus = "0.3.2"
dioxus-router = "0.3.0"
dioxus-ssr = "0.3.0"
env_logger = "0.10.0"
flexi_logger = "0.25.5"
log = "0.4.19"
measure_time = "0.8.2"
once_cell = { version = "1.17.1", default-features = false }
prettify_pinyin = "1.1.3"
rcgen = "0.11.1"
regex = "1.7.1"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
syslog = "6.1.0"
#tantivy = "0.19.2"
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
urlencoding = "2.1.2"
uuid = { version = "1.3.0", features = ["v4"] }
veloci = { version = "0.1.1", path = "../../veloci" }
