[package]
name = "create_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cedict = "0.3.1"
csv = "1.2.1"
kanji_hanzi_converter = "0.2.0"
pinyin_zhuyin = "0.1.2"
prettify_pinyin = "1.1.3"
regex = "1.7.3"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
tocfl = { version = "0.4.0"}
